compiler/tests/compile-fail/missing-module.arret
(import [does not exist]) ;~ ERROR module not found